--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,10 @@ article {
     padding: 20px;
     overflow-y: auto; 
 }
+.logo {
+    margin-left: 2rem;
+
+}
 
 
 aside {
@@ -39,3 +43,15 @@ aside {
     padding: 20px;
     overflow-y: auto;
 }
+
+@media (max-width: 800px) {
+    body.works_on_smartphone {
+        display: block;
+    }
+    body.works_on_smartphone main {
+        display: block;
+    }
+    header .right {
+        float: none;
+    }
+  }
