--- a/css_advanced/style.css
+++ b/css_advanced/style.css
@@ -128,6 +128,49 @@ header img{
     
 }
 
+.presenter-container{
+    font-family: Arial, Helvetica, sans-serif;
+    display:flex;
+    justify-content: flex-start;
+    align-items: center;
+    color: white;
+    background-color: #d29beb;
+    padding: 20px;
+}
 
+.presenter-img-wrapper {
+    margin-right: 20px;
+    height: 300px;
+    margin-left: 90px;
+}
+
+.presenter-img {
+   align-items: center;
+   justify-content: center;
+   margin-top:50%;
+   
+}
+.presenter-info{
+    display: flex;
+    flex-direction:column;
+    text-align:left;
+    margin-left:30px;
+    gap: 10px;
+
+}
+
+.presenter-info blockquote {
+    font-size: 25px;
+    margin-bottom: 10px;
+}
+
+.presenter-info h3 {
+    font-size:20px;
+    margin-bottom: 5px 0;
+}
+.presenter-info p {
+    font-size: 20px;
+    font-style: italic;
+}
 
 
