--- a/css_advanced/style.css
+++ b/css_advanced/style.css
@@ -20,10 +20,8 @@ header{
 
 nav ul{
     float: right;
-    justify-content:right;
     list-style: none;
     display: flex;
-    flex-direction: row;
     gap: 20px;
     
 }
@@ -253,20 +251,20 @@ header img{
     color: #da70d6;
     display: flex; 
     align-items: center; 
-    gap: 10px; /* Space between the image and name */
+    gap: 10px;
 }
 
 /* Styling for the image */
 .icon {
-    width: 50px; /* Set image size */
-    height: 50px; /* Set image size */
-    border-radius: 50%; /* Optional: to make the image circular */
+    width: 50px; 
+    height: 50px;
+    border-radius: 50%; 
 }
 
 /* Styling for the second row (rating image and time) */
 .rating-info {
-    display: flex; /* Arrange rating and time horizontally */
-    align-items: center; /* Vertically align items */
+    display: flex; 
+    align-items: center; 
     gap:5px; 
     margin-left: 10px;
 
@@ -281,7 +279,7 @@ header img{
 .icon-container{
     border-radius: 10px;
     position: relative;
-    width: 300px; /* You can adjust the width */
+    width: 300px; 
     height: 150px;
 }
 .icon-play{
@@ -371,9 +369,9 @@ header img{
 
 .main-faq {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 columns of equal width */
-    grid-template-rows: repeat(4, auto);   /* 4 rows with auto height based on content */
-    gap: 20px; /* Space between the columns and rows */
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(4, auto);   
+    gap: 20px; 
 }
 
 .faq-content {
@@ -387,5 +385,47 @@ header img{
 }
 
 .faq-content div {
-    margin-bottom: 10px; /* Space between question and answer */
+    margin-bottom: 10px; 
+}
+
+
+.footer {
+    background-color: #000;
+    width: 100%;
+    padding: 20px;
+    height: 150px;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
+    margin: 30px;
+}
+
+.footer-content img {
+    max-width: 200px; 
+}
+
+.media-icon {
+    display: flex;
+    justify-content: flex-end; 
+    gap: 15px; 
+}
+
+
+.media-icon a {
+    font-size: 20px;
+    background-color:black;
+    text-decoration: none; 
+    border-radius:50%;
+    color: white;
+    border: 1ppx solid black ;
+}
+
+.footer p {
+    text-align: center;
+    margin-top: 10px;
+    color: #fff;
+    opacity: 0.5;
 }
